--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="Mobile Programming"
+        android:text="@string/mobile_programming"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:visibility="gone"
