--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15sp"
             android:fontFamily="sans-serif-light"
-            android:text="Ahmad Abi Mulya"
+            android:text="@string/my_name"
             android:textColor="@color/white"
             android:textSize="32sp" />
 
@@ -53,7 +53,7 @@
             android:layout_below="@+id/tv_name"
             android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif"
-            android:text="1911511457"
+            android:text="@string/my_nim"
             android:textAllCaps="true"
             android:textColor="@color/address"
             android:textSize="14sp" />
@@ -61,12 +61,13 @@
     </RelativeLayout>
     <Button
         android:id="@+id/btn"
-        android:text="Calculator"
+        android:text="@string/txt_tugas_1"
+        android:textSize="14dp"
         android:layout_width="200dp"
-        android:layout_height="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="250dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rellay1"/>
 
 
