--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,14 +60,25 @@
 
     </RelativeLayout>
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btnTugas2"
         android:text="@string/txt_tugas_1"
-        android:textSize="14dp"
-        android:layout_width="200dp"
-        android:layout_height="250dp"
+        android:textSize="14sp"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rellay1"/>
+
+    <Button
+        android:id="@+id/btnTugas3"
+        android:text="@string/tugas_3_send_sms"
+        android:textSize="14sp"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rellay1"/>
 
 
